# almond

./: .gitignore  CMakeLists.txt  README.md  almond.cpp  build.sh  run.sh
cmake/modules/: FindLuaJIT.cmake
disk/: almond.js  main.js  main.wren  test.js
disk/actions/users/: destroy.wren  index.wren  update.wren
disk/actions/users/password/: create.wren  edit.wren  new.wren  show.wren
src/: almond.cpp  context.cpp  context.hpp  environment.cpp  environment.hpp  http_server.cpp  http_server.hpp  main.cpp  request.cpp  request.hpp  response.cpp  response.hpp  router.cpp  router.hpp  stubs.c  volume.cpp  volume.hpp
src/duktape/: duk_config.h
src/wren/: wren_common.h  wren_core.c
